# IntersecT

./: .gitignore  IntersecT.ipynb  README.md  pyproject.toml
docs/: TECHNICAL.md  USER_GUIDE.md
example/: Example_WERAMI_model.tab  Example_observed.txt  IntersecT.ipynb  MAGEMin_average_mp_observed.txt  PerpleX_average_mp_observed.txt  PerpleX_metabasite_Maffeisetal2025_observed.txt
example/CUSO-workshop-Lausanne-2026/: BAR38A_coe_observed.txt  BAR38A_observed.txt  Petroccia_et_al_2025_bulk_Magemin.csv
src/pyIntersecT/: IntersecT.py  mineral_aliases.py  mineral_symbols.toml  parsers.py
